<resources>
    <string name="app_name">loginsignup</string>
    <string name="login">login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="Login">Login</string>
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="register">Register</string>
    <string name="Register">Register</string>
    <string name="click_to_login">click_to_login</string>
    <string name="click_to_register">click_to_Register</string>
    <string name="logout">logout</string>
    <string name="username">UserName</string>
    <string name="role">role</string>
</resources>